--- a/index2.html
+++ b/index2.html
@@ -532,7 +532,7 @@ preload="auto"></audio>
     document.body.appendChild(myImage);
 </script>
   <div id="totop">
-  <a href="自我介绍.html" id="btn">顶部</a>
+  <a href="index2.html" id="btn">顶部</a>
 </div>
   <style>
     body, html{
